--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,9 +7,10 @@ edition = "2018"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-rurel = { git = "https://github.com/mtib/rurel" }
+rurel = { path = "../../github/rurel-mtib" }
 hnfen = { path = "../hnfen" }
 serde = { version = "1.0", features = ["derive"] } 
 serde_cbor = "0.11.1"
 plotters = "0.3.0"
 rand = "0.8.3"
+clap = "3.0.0-beta.2"
